ReloadServer/UI/css/style.css
html, body {
    height: 100%;
}

iframe {
    border: 0;
    height: 100%;
}

ul {
    list-style: none;
    margin: 0;
}
ul li {
    display: inline-block;
}

#wrap {
    width:100%;
    overflow:hidden;
}

#bar-left {
    position: relative;
    float: left;
    background: rgb(216, 221, 228);
    width: 300px;
    /*border-right: 1px solid rgb(225, 229, 235);*/
}
#bar-left-head {
    background: #efefef;
    border-bottom: 1px solid rgb(206, 206, 206);
}

#bar-left .nav-top {
    padding: 10px 0;
    background: rgb(238, 238, 238);
    text-align: center;
    border-top: 1px solid #fff;
    border-bottom: 1px solid rgb(227, 228, 227);

    background: #ededed; /* Old browsers */
    background: -moz-linear-gradient(top,  #ededed 0%, #dddddd 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ededed), color-stop(100%,#dddddd)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  #ededed 0%,#dddddd 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  #ededed 0%,#dddddd 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  #ededed 0%,#dddddd 100%); /* IE10+ */
    background: linear-gradient(to bottom,  #ededed 0%,#dddddd 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ededed', endColorstr='#dddddd',GradientType=0 ); /* IE6-9 */

}

#bar-left .project-head {
    background: #fff;
}

#bar-left .project-name {
    padding: 10px;
    font-weight: bold;
    font-size: 18px;
}
#bar-left .project-name-clip {
    width: 120px;
    overflow: hidden;
    display: inline-block;
    white-space: nowrap;
}


#bar-left a.btn-nostyle,
#bar-left a.btn-nostyle:hover {
    font-size: 12.9px;
    text-decoration: none;
    color: #262626;
    padding: 2px 10px;
}

#main-content {
    position: relative;
    background: #eee;
    margin: 0 0 0 300px;
    border-left: 1px solid rgb(184, 184, 184);
}

#main-content #content-nav {
    display: table;
}

#main-content #content-nav ul {
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
    margin-bottom: 0;
}

#main-content #content {
    background: #fff;
    position: relative; /* So codemirrors absolute positioning obeys its context*/
    height: 100%;
}

#main-content #console {
    background: #fff;
    height: 40%;
    position: absolute;
    bottom: 0;
}
#main-content #console div.span12 {
    border-top: 1px solid rgb(221, 221, 221);
}


.fill {
    height: 100%;
    min-height: 100%;

}
.pad10 { padding: 10px; }

ul#projects,
ul#files {
    border-top: 1px solid #bdbdbd;
}

ul#projects li,
ul#files li {
    display: block;
}

ul#files li a {
    color: #262626;
    border-top: 1px solid rgb(216, 221, 228);
    border-bottom: 1px solid rgb(216, 221, 228);

    display: block;
    padding-left: 10px;
}
ul#projects li a {

    color: #262626;
    border-top: 1px solid rgb(216, 221, 228);
    border-bottom: 1px solid rgb(216, 221, 228);

    display: block;
    padding: 10px;
}
ul#projects li a:hover {
    text-decoration: none;
}

.selected,
ul#projects li a:active,
ul#projects li a.select-project {
    border-top: 1px solid rgb(147, 173, 203);
    border-bottom: 1px solid rgb(105, 132, 162);

    font-weight: bold;
    color: #fff;
    text-shadow: 1px 1px 0 #888888;

    background: #9bb6d6; /* Old browsers */
    background: -moz-linear-gradient(top,  #9bb6d6 0%, #7a99bd 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#9bb6d6), color-stop(100%,#7a99bd)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  #9bb6d6 0%,#7a99bd 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  #9bb6d6 0%,#7a99bd 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  #9bb6d6 0%,#7a99bd 100%); /* IE10+ */
    background: linear-gradient(to bottom,  #9bb6d6 0%,#7a99bd 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9bb6d6', endColorstr='#7a99bd',GradientType=0 ); /* IE6-9 */
}

#bar-left-foot {
    overflow: auto;
    height: 200px;
    width: 100%;
    position: absolute;
    bottom: 0;
    border-top: 1px solid rgb(178, 194, 190);
    background: rgb(216, 221, 228);
}
#bar-left-foot .inner {
    border-top: 1px solid rgb(224, 229, 234);
}

.dl-horizontal dt {
    width: 40%;
}

.dl-horizontal dd {
    margin-left: 45%;
}
.select-project {
    position: relative;
}

.select-project ul {
    position: absolute;
    bottom: 10px;
    right: 0;
    padding: 0 !important;
}
.select-project ul li {
    padding: 0 !important;
    float: right;
}
.select-project ul li a {
    padding: 0 !important;
    margin-right: 10px;
    border: 0 !important;
    background: none;
    color: #fff !important;
    text-decoration: underline;
}
.select-project ul li a:hover {
    text-decoration: underline !important;
    color: #eee !important;
}
.select-project ul li a:active {
    background: 0 !important;
}
.radio.inline {
    white-space: nowrap;
    margin-right: 10px;
}

